Correct issue with div jumping up 10px

--- a/source/scss/_module_policy.scss
+++ b/source/scss/_module_policy.scss
@@ -75,7 +75,7 @@ Module: Policy
 	margin: 0;
 	padding: 0;
 	position: relative;
-	top: -10px;
+	// top: -10px;
 }
 
 .policy-flash {
